--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(untitled C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(untitled main.c)
+add_executable(untitled client.c
+        ipc_utils.c
+        ipc_utils.h
+        chat_utils.c
+        chat_utils.h)
