--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
-cmake_minimum_required(VERSION 3.30)
+cmake_minimum_required(VERSION 3.25.1)
 project(untitled C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(untitled client.c
+add_executable(server server.c
         ipc_utils.c
-        ipc_utils.h
         chat_utils.c
-        chat_utils.h)
+)
+
+add_executable(client client.c
+        ipc_utils.c
+        chat_utils.c
+)
